# greenboot

./: .gitignore  .packit.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  bundled-provides.jq  greenboot-failure.service  greenboot-requires.service  greenboot-script-runner.service  greenboot-script-runner.sh  greenboot-wants.service  greenboot.service  greenboot.sh  greenboot.spec  greenboot.target  test-ci
.devcontainer/: Dockerfile  devcontainer.json
.github/: commitlint.config.js  dependabot.yml  spellcheck-ignore
.github/workflows/: analysis.yml  cd.yml  ci.yml  comment-ci.yaml  greenboot-ci.yaml  greenboot-rs.yaml  labeler.yml  main.yml
development/: README.md  greenboot-failing-unit.spec
etc/greenboot/: greenboot.conf  motd
etc/grub.d/: greenboot.cfg
src/: main.rs
src/handler/: mod.rs
test/key/: ostree_key.pub
testing_assets/: passing_script.sh
tests/: 10_failing_check.sh  README.md  Vagrantfile  ansible.cfg  check-ostree.yaml  check_watchdog_support.bats  common.bash  failing-check.service  failing-script.sh  failing.service  greenboot-bootc-anaconda-iso.sh  greenboot-bootc-qcow2.sh  greenboot-bootc.yaml  greenboot-rpm-ostree.sh  greenboot-rpm-ostree.yaml  greenboot-rs.sh  greenboot_check.bats  greenboot_check_fail_required.bats  greenboot_check_fail_wanted.bats  greenboot_green.bats  greenboot_red.bats  grub2_set_counter.bats  launch_all_tests.sh  passing-check.service  passing-script.sh  passing.service  redboot_auto_reboot.bats  rpm_ostree_check_fallback.bats  run_ostree_upgrade.sh  run_test.sh
tmt/tests/: test.sh  (+1 more)
(+74 files in other folders)
